--- a/style.css
+++ b/style.css
@@ -2,17 +2,20 @@ body {
    font-family: "Poppins", sans-serif;
    margin: 0;
 }
+
 section {
-   display: flex;
+   padding: 0 5%;
 }
+
 .top-section {
+   padding-top: 10px;
    background-image: url(images/top-banner.png);
    background-repeat: no-repeat;
+   display: flex;
 }
 
 .half {
    width: 50%;
-   padding-left: 2%;
 }
 
 .half img {
@@ -31,7 +34,96 @@ section {
    color: white;
    font-weight: 700;
    text-decoration: none;
-   background-image: linear-gradient(orange, tomato);
+   background-image: linear-gradient(90deg, orange, tomato);
    padding: 10px 40px;
    border-radius: 5px;
+}
+
+/* Dream Big Section */
+.dream-big-section {
+   margin: 50px 0;
+   background-image: url(images/dream-bg.png);
+   background-repeat: no-repeat;
+   background-position: right;
+   display: flex;
+}
+
+.dream-half {
+   width: 50%;
+}
+
+.dream-half img {
+   width: 80%;
+}
+
+.dream-half h2 {
+   font-size: 40px;
+}
+
+.dream-half p {
+   color: gray;
+}
+
+.dream-half a {
+   padding: 10px 40px;
+   text-decoration: none;
+   color: white;
+   background-image: linear-gradient(90deg, orange, tomato);
+   border-radius: 5px;
+}
+
+/* experience-section */
+.experience-section {
+   background-image: url(images/exp-bg.png);
+   background-repeat: no-repeat;
+   background-position: left;
+   margin: 50px 0;
+}
+
+.experience-section h2 {
+   font-size: 40px;
+   padding-bottom: 10px;
+}
+
+.expr_items {
+   display: flex;
+}
+
+.experience_half {
+   width: 50%;
+   padding: 20px 20px;
+   box-shadow: 5px 7px 40px gray;
+   margin: 0 3%;
+}
+
+#full_stack {
+   border-left: 8px solid;
+   border-image: linear-gradient(180deg, rgb(231, 150, 0), rgb(255, 0, 0));
+   border-image-slice: 1;
+}
+
+#baby_stack {
+   border-left: 8px solid;
+   border-image: linear-gradient(180deg, rgb(0, 255, 21), rgb(255, 0, 242));
+   border-image-slice: 1;
+}
+
+.experience_half h4 {
+   color: orange;
+}
+
+.experience_half p {
+   color: gray;
+}
+
+
+/* Footer section */
+footer {
+   text-align: center;
+   padding: 20px 0;
+   margin-top: 100px;
+}
+
+footer span {
+   color: gray;
 }
